--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@ h1{
     font-size: 45px;
     text-align: center;
     margin: 0;
-    border-bottom: 2px solid dodgerblue;
+    border-bottom: 2px solid coral;
     padding: 25px;
     color: coral;
 }
